--- a/frontend/src/app/_components/loader/loader.component.html
+++ b/frontend/src/app/_components/loader/loader.component.html
@@ -1,3 +1,1 @@
-<p-progressBar mode="indeterminate"
-               [style]="{'height': '6px'}">
-</p-progressBar>
+<p-progressSpinner></p-progressSpinner>
