INB | UX improvements

--- a/frontend/src/app/pages/main-page/main-page.component.html
+++ b/frontend/src/app/pages/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<app-data-card [title]="'Loan application'"
+<app-data-card [title]="'LOAN APPLICATION'"
                [actionLabel]="'Submit'"
                (cardActionEmitter)="submit($event)"
                [body]="cardContent">
