INB | requests from frontend to backend, display decision result to user

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,3 +3,7 @@
 </div>
 <app-footer></app-footer>
 <loader *ngIf="isLoading"></loader>
+<p-toast key="success-toast"></p-toast>
+<p-toast key="info-toast"></p-toast>
+<p-toast key="warning-toast"></p-toast>
+<p-toast key="error-toast"></p-toast>
