--- a/frontend/src/app/_components/loader/loader.component.html
+++ b/frontend/src/app/_components/loader/loader.component.html
@@ -1,1 +1,3 @@
-<p-progressSpinner></p-progressSpinner>
+<div class="loader-container">
+  <p-progressSpinner class="loader"></p-progressSpinner>
+</div>
